// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseProgram ɠċ”1 1`] = `
Object {
  "links": Array [
    Object {
      "links": Array [
        Object {
          "arity": 0,
          "name": "ɠ",
          "type": "atom",
        },
        Object {
          "arity": 2,
          "name": "ċ",
          "type": "atom",
        },
        Object {
          "arity": 0,
          "type": "charLiteral",
          "value": "1",
        },
      ],
      "type": "chain",
    },
  ],
}
`;

exports[`parseProgram ɠḲV×/ị“Odd“Even” 1`] = `
Object {
  "links": Array [
    Object {
      "links": Array [
        Object {
          "arity": 0,
          "name": "ɠ",
          "type": "atom",
        },
        Object {
          "arity": 1,
          "name": "Ḳ",
          "type": "atom",
        },
        Object {
          "arity": 1,
          "name": "V",
          "type": "atom",
        },
        Object {
          "arity": 2,
          "name": "×",
          "type": "atom",
        },
        Object {
          "arity": 1,
          "link": Object {
            "arity": 2,
            "name": "×",
            "type": "atom",
          },
          "quick": "reduce",
          "type": "quick",
        },
        Object {
          "arity": 2,
          "name": "ị",
          "type": "atom",
        },
        Object {
          "arity": 0,
          "array": true,
          "type": "stringLiteral",
          "values": Array [
            "Odd",
            "Even",
          ],
        },
      ],
      "type": "chain",
    },
  ],
}
`;
